<resources>
    <string name="app_name">Pokedex</string>
    <string name="pokemon">Pokemon</string>
    <string name="moves">Moves</string>
    <string name="itens">Items</string>
    <string name="search">Search</string>
    <string name="pokemon_a">Pokemon A</string>
    <string name="_001">#001</string>
    <string name="moives">Movies</string>
    <string name="button_start">STATS</string>
    <string name="button_evolution">EVOLUTIONS</string>
    <string name="button_movie">MOVES</string>
    <string name="name_pokemon">Squirtle</string>
    <string name="content_pokemon">Squirtle’s shell is not merely used for protection.
The shell’s rounded shape and the grooves on its surface help minimize resistance in water, enabling this pokemon to swim at high speed.</string>
    <string name="bubble">Bubble</string>
    <string name="master_ball">Master Ball</string>
    <string name="movie">Inflicts regular damage. Has a 10% chance to lower the target’s Speed by one stage.</string>
    <string name="_12000">1200</string>
    <string name="base_power">Base Power</string>
    <string name="_40">40</string>
    <string name="_100">100%</string>
    <string name="accuracy">Accuracy</string>
    <string name="pp">PP</string>
    <string name="ultra_ball">Ultra Ball</string>
    <string name="items">Used in Battle

Attempts to catch a wild Pokémon, using a catch rate of 2x.
If used in a trainer battle, nothing happens and the ball is lost.</string>
    <string name="hp">HP</string>
    <string name="_000">000</string>
    <string name="atk">ATK</string>
    <string name="def">DEF</string>
    <string name="satk">SATK</string>
    <string name="sdef">SDEF</string>
    <string name="spd">SPD</string>
    <string name="weaknesses">Weaknesses</string>
    <string name="abilities">Abilities</string>
    <string name="torrent">Torrent</string>
    <string name="powers_up_water_type_moves_when_the_pok_mon_is_in_trouble">Powers up Water-type moves when the Pokémon is in trouble.</string>
    <string name="breeding">Breeding</string>
    <string name="egg_group">Egg Group</string>
    <string name="hatchtime">Hatch Time</string>
    <string name="gender">Gender</string>
    <string name="monster">Monster</string>
    <string name="_5101_steps">5101 Steps</string>
    <string name="water_i">Water I</string>
    <string name="_20_cycles">20 Cycles</string>
    <string name="_12_5">12,5%</string>
    <string name="_85_5">85,5%</string>
    <string name="capture">Capture</string>
    <string name="habitat">Habitat</string>
    <string name="waters_edge">Waters-Edge</string>
    <string name="generation">Generation</string>
    <string name="generation_1">Generation 1</string>
    <string name="capture_rate">Capture Rate</string>
    <string name="_45">45%</string>
    <string name="sprites">Sprites</string>
    <string name="normal">Normal</string>
    <string name="shiny">Shiny</string>
    <string name="lv_16">Lv.16</string>
    <string name="lv_32">Lv.32</string>
    <string name="mega_stone">Mega Stone</string>
    <string name="level">Level</string>
    <string name="c_l_i_x_y_r">Đã có lỗi xảy ra</string>
    <string name="d_li_u_tr_ng">Dữ liệu trống</string>
    <string name="noInternet">Không có kết nối Internet</string>


</resources>
