<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_screen">

    <ImageButton
        android:id="@+id/imbBackButton"
        android:layout_width="46dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:padding="4dp"
        android:src="@drawable/ic_down"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />


    <View
        android:id="@+id/content1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_xxlarge"
        android:background="@drawable/custom_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_Pokemon"
        android:layout_width="@dimen/size_image"
        android:layout_height="@dimen/size_image"
        android:layout_marginTop="@dimen/margin_large_max"
        android:background="@drawable/pokedex"
        app:layout_constraintBottom_toTopOf="@+id/content1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,UnusedAttribute" />


    <TextView
        android:id="@+id/tv_Name_Pokemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xnormal"
        android:text="@string/name_pokemon"
        android:textColor="@color/text"
        android:textSize="@dimen/text_big"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_Pokemon"
        tools:ignore="NotSibling,SpUsage" />

    <ImageView
        android:id="@+id/img_Water"
        android:layout_width="@dimen/width_image_small"
        android:layout_height="@dimen/height_image_smail"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@drawable/water"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Name_Pokemon"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_description_pokemon"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_xnormal"
        android:layout_marginEnd="@dimen/margin_normal"
        android:gravity="center_horizontal"
        android:text="@string/content_pokemon"
        android:textColor="@color/text"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_Water" />

    <LinearLayout
        android:id="@+id/content_button"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginTop="@dimen/margin_top_large"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/padding_small"
        android:weightSum="3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description_pokemon">

        <Button
            android:id="@+id/btStart"
            style="@style/button_active"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_weight="1"
            android:elevation="2dp"
            android:gravity="center"
            android:text="@string/button_start"
            tools:ignore="UnusedAttribute" />

        <Button
            android:id="@+id/btEvolution"
            style="@style/button_noactive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_weight="1"
            android:elevation="2dp"
            android:text="@string/button_evolution"
            tools:ignore="ButtonStyle,UnusedAttribute" />
        <!--        style="@style/button_noactive"-->
        <Button
            android:id="@+id/btMoves"
            style="@style/button_noactive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_weight="1"
            android:elevation="2dp"
            android:text="@string/button_movie"
            tools:ignore="ButtonStyle,UnusedAttribute" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/content_frame_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content_button" />

    <!--    <View-->
    <!--        android:id="@+id/view_bottom"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="@dimen/height_image_smail"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
    <!--        app:layout_constraintRight_toRightOf="parent"-->

    <!--        />-->
</androidx.constraintlayout.widget.ConstraintLayout>
