<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_background_screen_item"
    tools:context=".screen.movie.detail.DetailMoviePokemonActivity">

    <ImageButton
        android:id="@+id/imbBack"
        android:layout_width="46dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:padding="4dp"
        android:src="@drawable/ic_down"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />


    <RelativeLayout
        android:id="@+id/ctRelativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/size_tap_height"
        android:background="@drawable/custom_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


    </RelativeLayout>

    <TextView
        android:id="@+id/tvNameItemsPokemon"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/ultra_ball"
        android:textColor="@color/text"
        android:textSize="@dimen/text_big"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgItemsPokemon"
        tools:ignore="NotSibling,SpUsage" />

    <LinearLayout
        android:id="@+id/contentLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/margin_normal_small"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNameItemsPokemon"
        tools:ignore="MissingConstraints,UseCompoundDrawables">

        <TextView
            android:id="@+id/tvPriceItems"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/_12000"
            android:textAlignment="textEnd"
            android:textColor="@color/text_hint"
            android:textSize="@dimen/text_size_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="ContentDescription,RtlCompat" />

        <ImageView
            android:id="@+id/imgPrice"
            android:layout_width="12dp"
            android:layout_height="16dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_small_xmin"
            android:layout_marginLeft="@dimen/margin_small_xmin"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:background="@drawable/ic_price_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvDescriptionItems"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="@dimen/margin_normal"
        android:gravity="center_horizontal"
        android:padding="20dp"
        android:text="@string/items"
        android:textColor="@color/text"
        android:textSize="@dimen/text_size_normal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contentLinearLayout" />

    <ImageView
        android:id="@+id/imgItemsPokemon"
        android:layout_width="@dimen/size_image_xnormal"
        android:layout_height="@dimen/size_image_xnormal"
        android:layout_marginTop="79dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/ctRelativeLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,UnusedAttribute" />


</androidx.constraintlayout.widget.ConstraintLayout>